--- a/public/index-dev.html
+++ b/public/index-dev.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script src="../dll/react.dll.js"></script>
+    <script src="../dll/lib.dll.js"></script>
   </body>
 </html>
